@@ -1,5 +1,4 @@
 - module: vsphere
-  metricsets: ["datastore", "host", "virtualmachine"]
   period: 10s
   hosts: ["https://localhost/sdk"]
 
